--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
                     <p>JavaScript</p>
                 </div>
                 <div>
-                    <a href=""><h3 class="btn-1">View Details →</h3></a>
+                    <a href="https://ashapulokeshportfolio.netlify.app"><h3 class="btn-1">View Details →</h3></a>
                     <a href="https://github.com/LokeshAshapu"><i class="fab fa-github a"></i></a>
                 </div>
             </div>
