--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <span class="line line3"></span>
             </div>
             <ul class="menu-items">
-                <li><a href="#About">Home</a></li>
-                <li><a href="#skills">Skills</a></li>
+                <li><a href="index.html#About">Home</a></li>
+                <li><a href="index.html#skills">Skills</a></li>
                 <li><a href="./projects.html">Projects</a></li>
-                <li><a href="#Contact">Contact</a></li>
+                <li><a href="index.html#Contact">Contact</a></li>
             </ul>
             <h1 class="logo"><a href="index.html">Ashapu Lokesh</a></h1>
         </div>
