--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </br></br>
             <div class="connect">
                 <h4 class="btn"><a href="#Contact me">Contact Me →</a></h4>&nbsp;&nbsp;&nbsp;&nbsp;
-                <i class="fa-solid fa-envelope fa-2x" style="color: #444;"></i>&nbsp;&nbsp;&nbsp;&nbsp;
-                <i class="fa-brands fa-linkedin fa-2x" style="color: #444;"></i>
+                <i class="fa-solid fa-envelope f1" style="color: #444;"></i>&nbsp;&nbsp;&nbsp;&nbsp;
+                <i class="fa-brands fa-linkedin f1" style="color: #444;"></i>
             </div>
         </div>
     </div>
