--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </br></br>
             <div class="connect">
                 <h4 class="btn"><a href="#Contact me">Contact Me →</a></h4>&nbsp;&nbsp;&nbsp;&nbsp;
-                <i class="fa-solid fa-envelope f1" style="color: #444;"></i>&nbsp;&nbsp;&nbsp;&nbsp;
-                <i class="fa-brands fa-linkedin f1" style="color: #444;"></i>
+                <a href="mailto:lokeshashapu@gmail.com" target="_blank"><i class="fa-solid fa-envelope f1" style="color: #444;"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="https://www.linkedin.com/in/ashapu-lokesh-25159a298 " target="_blank"><i class="fa-brands fa-linkedin f1" style="color: #444;"></i></a>
             </div>
         </div>
     </div>
@@ -253,11 +253,11 @@
                 <a href="./projects.html">Projects</a>
             </div>
             <div class="footer-right">
-                <a href="mailto:lokeshashapu@gmail.com"><i class="fa-solid fa-envelope-square i"></i></a>
-                <a href="https://www.linkedin.com/in/ashapu-lokesh-25159a298 "><i class="fa-brands fa-linkedin-in i"></i></a>
-                <a href="https://www.facebook.com/Loki615/"><i class="fa-brands fa-facebook-messenger i"></i></a>
-                <a href="https://github.com/LokeshAshapu"><i class="fa-brands fa-github-square i"></i></a>
-                <a href="https://x.com/AshapuLokesh?t=T1v2TO-SFc3n_6lviQy5Fg&s=09"><i class="fa-brands fa-square-x-twitter i"></i></a>
+                <a href="mailto:lokeshashapu@gmail.com"target="_blank"><i class="fa-solid fa-envelope-square i"></i></a>
+                <a href="https://www.linkedin.com/in/ashapu-lokesh-25159a298 "target="_blank"><i class="fa-brands fa-linkedin-in i"></i></a>
+                <a href="https://www.facebook.com/Loki615/"target="_blank"><i class="fa-brands fa-facebook-messenger i"></i></a>
+                <a href="https://github.com/LokeshAshapu"target="_blank"><i class="fa-brands fa-github-square i"></i></a>
+                <a href="https://x.com/AshapuLokesh?t=T1v2TO-SFc3n_6lviQy5Fg&s=09"target="_blank"><i class="fa-brands fa-square-x-twitter i"></i></a>
             </div>
         </div>
         <center>
