--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </br></br>
             <div class="connect">
                 <h4 class="btn"><a href="#Contact me">Contact Me →</a></h4>&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="mailto:lokeshashapu@gmail.com" target="_blank"><i class="fa-solid fa-envelope f1" style="color: #444;"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="https://www.linkedin.com/in/ashapu-lokesh-25159a298 " target="_blank"><i class="fa-brands fa-linkedin f1" style="color: #444;"></i></a>
+                <a href="mailto:lokeshashapu@gmail.com" target="_blank"><i class="fa-solid fa-envelope fa-2x" style="color: #444;"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="https://www.linkedin.com/in/ashapu-lokesh-25159a298 " target="_blank"><i class="fa-brands fa-linkedin fa-2x" style="color: #444;"></i></a>
             </div>
         </div>
     </div>
