--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
                 </div>
                 <div>
                     <a href="https://ashapulokeshportfolio.netlify.app"><h3 class="btn-1">View Details →</h3></a>
-                    <a href="https://github.com/LokeshAshapu"><i class="fab fa-github a"></i></a>
+                    <a href="https://github.com/LokeshAshapu" target="_blank"><i class="fab fa-github a"></i></a>
                 </div>
             </div>
         </div>
@@ -77,12 +77,12 @@
                 <a href="./projects.html">Projects</a>
             </div>
             <div class="footer-right">
-                <a href="mailto:lokeshashapu@gmail.com"><i class="fa-solid fa-envelope-square i"></i></a>
-                <a href="https://www.linkedin.com/in/ashapu-lokesh-25159a298 "><i
-                        class="fa-brands fa-linkedin-in i"></i></a>
-                <a href="https://www.facebook.com/Loki615/"><i class="fa-brands fa-facebook-messenger i"></i></a>
-                <a href="https://github.com/LokeshAshapu"><i class="fa-brands fa-github-square i"></i></a>
-                <a href="https://x.com/AshapuLokesh?t=T1v2TO-SFc3n_6lviQy5Fg&s=09"><i
+                <a href="mailto:lokeshashapu@gmail.com" target="_blank"><i class="fa-solid fa-envelope-square i"></i></a>
+                <a href="https://www.linkedin.com/in/ashapu-lokesh-25159a298 " target="_blank"><i
+                        class="fa-brands fa-linkedin-in i" target="_blank"></i></a>
+                <a href="https://www.facebook.com/Loki615/" target="_blank"><i class="fa-brands fa-facebook-messenger i"></i></a>
+                <a href="https://github.com/LokeshAshapu" target="_blank"><i class="fa-brands fa-github-square i"></i></a>
+                <a href="https://x.com/AshapuLokesh?t=T1v2TO-SFc3n_6lviQy5Fg&s=09" target="_blank"><i
                         class="fa-brands fa-square-x-twitter i"></i></a>
             </div>
         </div>
