--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 problems. Specializing in modern Javascript frameworks and scalable architecture.</p>
             </br></br>
             <div class="connect">
-                <h4 class="btn"><a href="#Contact me">Contact Me →</a></h4>&nbsp;&nbsp;&nbsp;&nbsp;
+                <h4 class="btn"><a href="index.html#Contact_me">Contact Me →</a></h4>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="mailto:lokeshashapu@gmail.com" target="_blank"><i class="fa-solid fa-envelope fa-2x" style="color: #444;"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="https://www.linkedin.com/in/ashapu-lokesh-25159a298 " target="_blank"><i class="fa-brands fa-linkedin fa-2x" style="color: #444;"></i></a>
             </div>
@@ -228,7 +228,7 @@
     </div>
 
     <!--Get in touch-->
-    <div id="Contact me" style="background-color: rgb(246, 248, 250); padding: 20px;">
+    <div id="Contact_me" style="background-color: rgb(246, 248, 250); padding: 20px;">
         <center>
             <h1>Ready to Start Your Next Project?</h1><br>
             <p class="para-1">I'm always looking for exciting opportunities to create exceptional digital
