--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="./projects.html">Projects</a></li>
                 <li><a href="index.html#Contact">Contact</a></li>
             </ul>
-            <h1 class="logo"><a href="index.html">Ashapu Lokesh</a></h1>
+            <h1 class="logo"><a class="Logo" href="index.html">Ashapu Lokesh</a></h1>
         </div>
     </nav>
     <!--About section-->
