--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"> -->
 
     <link rel="shortcut icon" href="./logo (2).png" type="image/png">
     <title>Lokesh's Portfolio | Projects</title>
@@ -62,7 +61,7 @@
         
     </div>
 
-    <!--Footer-->
+    <!--Footer section-->
     <div id="footer">
         <center>
             <h2>Let's Connect</h2>
