--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <ul>
                     <li class="li"><span>HTML</span></li>
                     <li class="li"><span>CSS</span></li>
+                    <li class="li"><span>Tailwind CSS</span></li>
                     <li class="li"><span>JavaScript</span></li>
                 </ul>
             </div>
