--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,7 @@
             <h2>My Projects</h2>
             <p class="para-2">Browse through my portfolio of projects, showcasing my skills in web development, design, and problem-solving.</p>
         </center>
+        <div class="Projects_main">
         <div class="prodiv">
             <div class="prodiv1">
                 
@@ -96,7 +97,7 @@
                 </div>
             </div>
         </div>
-        
+        </div>
     </div>
 
     <!--Footer section-->
